fixed the disappearing <legend> on ie9
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/appointments@7437 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/css/front.css
+++ b/css/front.css
@@ -82,7 +82,7 @@ opacity:0.6;
 table.appointments-legend-table {
 	width: auto;
 }
-.appointments-legend-table  td{
+table.appointments-legend-table  td{
 	padding-right: 10px;
 	text-align:right;
 	height: 20px;
